Added missing years to data file.